--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -94,10 +94,10 @@
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="70dp"
-                    android:layout_height="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="14dp"
-                    android:layout_marginStart="48dp"
+                    android:layout_marginStart="45dp"
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="piro?"
@@ -105,15 +105,15 @@
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="200dp"
-                    android:layout_height="32dp"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginEnd="42dp"
-                    android:layout_marginStart="48dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="152dp"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp.2500 /Biji"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -122,20 +122,21 @@
 
                 <TextView
                     android:id="@+id/textView13"
-                    android:layout_width="100dp"
-                    android:layout_height="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:layout_marginEnd="68dp"
-                    android:layout_marginStart="18dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="Biji"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.04"
                     app:layout_constraintStart_toEndOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintVertical_bias="0.0" />
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
@@ -155,7 +156,7 @@
                 <TextView
                     android:id="@+id/textView17"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="27dp"
                     android:layout_marginEnd="278dp"
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/skranji_bold"
@@ -210,11 +211,9 @@
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_marginBottom="13dp"
-                    android:layout_marginEnd="13dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="12dp"
                     android:fontFamily="@font/skranji"
                     android:text="Nama"
                     android:textSize="17sp"
@@ -227,8 +226,7 @@
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="13dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -242,8 +240,7 @@
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -257,8 +254,8 @@
                 <TextView
                     android:id="@+id/textView21"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -272,7 +269,7 @@
                 <TextView
                     android:id="@+id/textView22"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -285,7 +282,7 @@
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -303,7 +300,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginBottom="24dp"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/border_style"
                     app:layout_constraintBottom_toTopOf="@+id/btPilih2"
@@ -343,32 +340,32 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="25dp"
-                    android:layout_height="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="9dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toStartOf="@+id/textView14"
+                    app:layout_constraintHorizontal_bias="0.523"
                     app:layout_constraintStart_toEndOf="@+id/textView22"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
                 <TextView
                     android:id="@+id/textView14"
-                    android:layout_width="100dp"
-                    android:layout_height="32dp"
-                    android:layout_marginBottom="9dp"
-                    android:layout_marginEnd="178dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginEnd="188dp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="iki regone"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView6"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
             </android.support.constraint.ConstraintLayout>
