--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -94,36 +94,37 @@
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="70dp"
-                    android:layout_height="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="14dp"
-                    android:layout_marginStart="48dp"
+                    android:layout_marginStart="92dp"
                     android:layout_marginTop="17dp"
                     android:fontFamily="@font/skranji"
                     android:text="piro?"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
-                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="200dp"
-                    android:layout_height="32dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="42dp"
                     android:layout_marginStart="48dp"
                     android:fontFamily="@font/skranji"
                     android:text="Rp.13.000 /Kg"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.132"
                     app:layout_constraintStart_toEndOf="@+id/textView5" />
 
                 <TextView
                     android:id="@+id/textView13"
-                    android:layout_width="100dp"
-                    android:layout_height="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:layout_marginEnd="68dp"
                     android:layout_marginStart="18dp"
@@ -133,9 +134,10 @@
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.184"
                     app:layout_constraintStart_toEndOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintVertical_bias="0.0" />
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
@@ -210,25 +212,21 @@
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_marginBottom="13dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="13dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="12dp"
                     android:fontFamily="@font/skranji"
                     android:text="Nama"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView19"
                     app:layout_constraintEnd_toStartOf="@+id/editText"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView17" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="13dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -242,8 +240,7 @@
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
@@ -257,8 +254,7 @@
                 <TextView
                     android:id="@+id/textView21"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
