--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -221,7 +221,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/editText"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView17" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView17"
+                    app:layout_constraintVertical_bias="1.0" />
 
                 <TextView
                     android:id="@+id/textView19"
@@ -331,7 +332,6 @@
                     android:layout_marginStart="16dp"
                     android:background="#6c6c6c"
                     android:onClick="klikPilih2"
-                    android:text="Pesan"
                     android:textColor="#ffffff"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -362,7 +362,7 @@
                     android:layout_marginEnd="188dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
-                    android:text="iki regone"
+                    android:text=""
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
