--- a/SokaJamur/app/src/main/res/layout/activity_artikel.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_artikel.xml
@@ -25,26 +25,15 @@
             android:gravity="center_vertical"
             android:text="Merk"
             android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/deskripsi"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="Deskripsi"
-            android:textSize="25sp"
-            tools:ignore="DuplicateIds" />
     </LinearLayout>
 
-
         <TextView
-            android:id="@+id/deskripsi"
+            android:id="@+id/isi"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
-            android:text="Deskripsi"
+            android:text="isi"
             android:textSize="25sp"
             tools:ignore="DuplicateIds" />
 
