--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -143,7 +143,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout3"
                 android:layout_width="368dp"
-                android:layout_height="330dp"
+                android:layout_height="272dp"
                 android:layout_marginBottom="23dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
@@ -281,13 +281,13 @@
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Metode Pembayaran"
                     android:textSize="17sp"
-                    app:layout_constraintBottom_toTopOf="@+id/btPilih"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/cbBox"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -299,10 +299,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginBottom="24dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/border_style"
-                    app:layout_constraintBottom_toTopOf="@+id/btPilih"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <ImageView
@@ -319,23 +319,6 @@
                     app:layout_constraintTop_toTopOf="@+id/cbBox"
                     app:layout_constraintVertical_bias="0.612"
                     app:srcCompat="@drawable/logo_cbox" />
-
-                <Button
-                    android:id="@+id/btPilih"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cbBox"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:background="#6c6c6c"
-                    android:onClick="klikPilih"
-                    android:text="Pesan"
-                    android:textColor="#ffffff"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="OnClick" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -368,6 +351,38 @@
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
             </android.support.constraint.ConstraintLayout>
+
+            <Button
+                android:id="@+id/btPilih2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:text="Hitung" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btPilih3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:text="Pesan"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btPilih4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:text="Batal"
+                    android:visibility="gone" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
