--- a/SokaJamur/app/src/main/res/layout/content_home.xml
+++ b/SokaJamur/app/src/main/res/layout/content_home.xml
@@ -47,123 +47,19 @@
         app:layout_constraintTop_toBottomOf="@+id/slider"
         app:layout_constraintVertical_bias="0.003" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
+        <RelativeLayout
+            android:layout_width="350dp"
+            android:layout_height="550dp">
 
-            <ImageView
-                android:id="@+id/imghp"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/textView7"
+            <ListView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:text="Jamur Tiram"
-                android:textSize="25sp"
-                android:textColor="#2d5a80"
-                android:fontFamily="@font/skranji"
-                app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.037"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/slider"
-                app:layout_constraintVertical_bias="0.248" />
-        </LinearLayout>
+                />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <ImageView
-            android:id="@+id/imghp1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="Penyakit Jamur"
-            android:textSize="25sp"
-            android:textColor="#2d5a80"
-            android:fontFamily="@font/skranji"
-            app:layout_constraintBottom_toBottomOf="@+id/textView6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.037"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/slider"
-            app:layout_constraintVertical_bias="0.248" />
-    </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/imghp2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:text="Budidaya Jamur"
-                android:textSize="25sp"
-                android:textColor="#2d5a80"
-                android:fontFamily="@font/skranji"
-                app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.037"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/slider"
-                app:layout_constraintVertical_bias="0.248" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/imghp3"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:text="Baglog Jamur"
-                android:textSize="25sp"
-                android:textColor="#2d5a80"
-                android:fontFamily="@font/skranji"
-                app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.037"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/slider"
-                app:layout_constraintVertical_bias="0.248" />
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </ScrollView>
