--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -134,7 +134,7 @@
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.184"
+                    app:layout_constraintHorizontal_bias="0.276"
                     app:layout_constraintStart_toEndOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
                     app:layout_constraintVertical_bias="0.0" />
@@ -322,7 +322,7 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="25dp"
+                    android:layout_width="0dp"
                     android:layout_height="32dp"
                     android:layout_marginBottom="9dp"
                     android:layout_marginStart="11dp"
@@ -343,7 +343,7 @@
                     android:layout_marginEnd="178dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/skranji"
-                    android:text="iki regone"
+                    android:text="0"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
